//OBSERVER PATTERN - Interface do Observador
public interface ProductObserver {
    void onProductAvailable(String productName);
}
